[metadata]
license_file = LICENSE
description_file = README.rst

[coverage:run]
branch = True
source = highcharts_core
omit =
    */__version__.py

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain if tests don't hit defensive assertion code:
    raise NotImplementedError
    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:
ignore_errors = True
